--- a/notebook/x-ray-gan-seg.ipynb
+++ b/notebook/x-ray-gan-seg.ipynb
@@ -1,1 +1,33 @@
-# TODO
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "13aa119c",
+   "metadata": {},
+   "source": [
+    "#### ADD TITLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6dd5529",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
