--- a/notebook/x_ray_gan_seg.ipynb
+++ b/notebook/x_ray_gan_seg.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -24,13 +25,76 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## Imports"
+      ],
       "metadata": {
-        "id": "bBQSXDQqtnbI"
+        "id": "uXr2ffU4url4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dGUOMmweyeVN"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Globals"
+      ],
+      "metadata": {
+        "id": "OByRHGuyutA0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Utils"
+      ],
+      "metadata": {
+        "id": "2AnA1lt1uu7e"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data"
+      ],
+      "metadata": {
+        "id": "5fIbWdCiuv3t"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Network"
+      ],
+      "metadata": {
+        "id": "8mkbbopguxqS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Train"
+      ],
+      "metadata": {
+        "id": "6qD4Xdxsu0Kc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Evaluation"
+      ],
+      "metadata": {
+        "id": "kfB1-ZQau1I1"
+      }
     }
   ]
 }
